--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godotTools.editorPath.godot4": "g:\\Godot\\Godot_v4.3-stable_win64.exe"
+    "godotTools.editorPath.godot4": "c:\\Users\\j_tur\\Projects\\Godot\\Godot_v4.3\\Godot_v4.3-stable_win64.exe"
 }
